--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
       <h1 class="title">Elegant Contact Form - Nodemailer</h1>
       <form class="cf" action="/send" method="post">
           <div class="half left cf">
-            <input type="text" id="input-name" placeholder="Name" class="four columns">
-            <input type="email" id="input-email" placeholder="Email address" class="four columns">
-            <input type="text" id="input-subject" placeholder="Subject" class="four columns">
+            <input type="text" name="name" id="input-name" placeholder="Name" class="four columns">
+            <input type="email" name="email" id="input-email" placeholder="Email address" class="four columns">
+            <input type="text" name="subject" id="input-subject" placeholder="Subject" class="four columns">
           </div>
         <div class="half right cf">
           <textarea name="message" type="text" id="input-message" placeholder="Message" class="twelve columns"></textarea>
